--- a/produk.html
+++ b/produk.html
@@ -10,13 +10,18 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="vendor/bootstrap/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/style.css?v=2">
     <script src="vendor/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-3.6.3.min.js"></script>
     <style>
         /* tulis kode CSS internal di bawah sini */
 
-
-
+section {
+    min-height:90vh;
+    }
+footer a.nav-link {
+    color:white;
+}
         /* Batas Akhir penulisan kode CSS internal */
     </style>
 </head>
@@ -24,7 +29,7 @@
 <body>
     <!-- Tulis Kode Bootstrap Di Bawah Sini -->
 
-    <nav class="navbar sticky-top navbar-dark bg-success navbar-expand-lg bisadicopy">
+    <nav class="navbar sticky-top navbar-dark  navbar-expand-lg bisadicopy">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <img src="images/logo/logo_kuy.png" height="40" alt="image">
@@ -52,14 +57,14 @@
                     href="https://wa.me/6281291551234?text=halo kopi kuy saya mau pesan"><i class="bi bi-whatsapp"></i>
                     Chat</a>
             </div>
-        </div>
+        </div> 
     </nav>
 
     <section class="riki-block produk text-center my-5 py-5">
         <div class="container">
             <h1>Pilih Produk Anda</h1>
             <p class="fs-4">Kualitas biji kopi terbaik, fresh diambil langsung dari petani</p>
-            <hr class="border border-success border-3 opacity-75">
+            <hr class="border border-white border-3 opacity-75">
 
             <!-- Ini Untuk Select -->
             <div class="row justify-content-center">
@@ -153,11 +158,11 @@
 <!--mulai footer -->
 
 
-    <footer class="riki-block footer-small py-4 bg-success">
+    <footer class="riki-block footer-small py-4">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 col-md-8">
-                    <ul class="nav justify-content-center justify-content-md-start bg-dark">
+                    <ul class="nav justify-content-center justify-content-md-start">
                         <li class="nav-item">
                             <a class="nav-link" href="index.html#best-seller">Best Seller</a>
                         </li>
